--- a/relay/package.json
+++ b/relay/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "dojo-relay",
+  "name": "nostr-credential-relay",
   "version": "0.1.0",
   "description": "NOSTR relay with NIP-XXX Hierarchical Delegated Credentials support",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
-    "test": "vitest"
+    "dev": "ts-node src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
-    "@noble/curves": "^1.4.0",
-    "@noble/hashes": "^1.4.0",
-    "better-sqlite3": "^11.0.0",
-    "ws": "^8.16.0",
-    "dotenv": "^16.4.0"
+    "@noble/curves": "^1.3.0",
+    "@noble/hashes": "^1.3.3",
+    "better-sqlite3": "^9.4.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.9",
+    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18.0.0"
   }
 }
