--- a/relay/package.json
+++ b/relay/package.json
@@ -2,6 +2,7 @@
   "name": "dojo-relay",
   "version": "0.1.0",
   "description": "NOSTR relay with NIP-XXX Hierarchical Delegated Credentials",
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "dojo-cli": "dist/cli.js"
@@ -11,7 +12,11 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "cli": "tsx src/cli.ts",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:training": "vitest run usecase.training",
+    "test:iot": "vitest run usecase.iot"
   },
   "dependencies": {
     "@noble/curves": "^1.4.0",
@@ -23,6 +28,7 @@
     "@types/better-sqlite3": "^7.6.9",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
+    "@vitest/coverage-v8": "^1.2.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
